macros/tests/compile_fail/freshness_self_reference.stderr
error: expected `;`
  --> tests/compile_fail/freshness_self_reference.rs:17:5
   |
17 |     }
   |     ^
